# rag-pipeline-poc

./: .gitignore  My workflow.json  docker-compose.yaml  go.work.sum
datasets/documents/datasets/BaritoLog/wiki/: readme.md
etlutil/: Dockerfile  main.py  pyproject.toml
evaluator/: .env.example  dataset.csv  embeddings.py  generate-tests.ipynb  pyproject.toml
ingester/: .env.example  README.md  ingester_poc.ipynb  main.py  pyproject.toml
ingester/.ipynb_checkpoints/: ingester_poc-checkpoint.ipynb
knowledge server/: .gitignore  Makefile  README.md  config.example.yaml  datasource.example.yaml  datasource.yaml  docker-compose.yml  document_source.yaml  main.py  pyproject.toml
knowledge server/config/: config.py
knowledge server/loader/: datasource.py  directory.py  factory.py  lark.py  loader.py
knowledge server/model/: factory.py  model_garden.py
knowledge server/vector_store/: milvus.py
retriever/: go.mod  go.sum
retriever/cmd/client/: main.go
retriever/cmd/retriever-mcp-server/: main.go
retriever/internal/flagset/: flagset.go
retriever/internal/model_garden/: model_garden.go
retriever/internal/tools/: query.go  tools.go
