[project]
name = "ingester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "pymilvus>=2.6.3",
    "pymilvus-model>=0.3.2",
    "pypdf>=6.4.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
